css/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

ul[class],
ol[class] {
  padding: 0;
}

body,
h1,
h2,
h3,
h4,
p,
ul[class],
ol[class],
li,
figure,
figcaption,
blockquote,
dl,
dd {
  margin: 0;
}
html {
  scroll-behavior: smooth;
}
html, body {
  height: 100%;
}

body {
  scroll-behavior: smooth;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
  display: flex;
  flex-direction: column;
}

ul[class],
ol[class] {
  list-style: none;
}

a:not([class]) {
  text-decoration-skip-ink: auto;
}

img {
  max-width: 100%;
  display: block;
}

article > * + * {
  margin-top: 1em;
}

input,
button,
textarea,
select {
  font: inherit;
}

header {
  background-color: rgb(2, 100, 19);
  height: 100px;
}
nav.menu {
  margin: 0 100px 0 100px;
  height: 100%;
  display: flex;
  align-items: center;
}
ul.menu__list {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}
li.menu__item>a.menu__link {
  text-decoration: none;
  color: white;
  font-size: 20px;
}
li.menu__item>a.menu__link:hover {
  color: yellowgreen;
  text-shadow: 2px 2px 8px black;
}
.main {
  margin: 0 100px 0 100px;
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  flex-wrap: wrap;
}
.general {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
  width: 100%;
  margin-bottom: 40px;
  border-bottom: 5px solid rgb(2, 100, 19);
}
img.general__avatar {
  width: 200px;
  height: 200px;
  margin: 10px 0 10px 0;
}
.description {
  margin-left: 20px;
  text-transform: uppercase;
}
.description__name {
  font-size: 50px;
  font-weight: bold;
}
.description__profession {
  font-style: italic;
}

.content-item {
  border-bottom: 2px solid rgb(2, 100, 19);
}

.content-item_text-center {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.content-item_code {
  width: 100%;
  flex-grow: 1;
}
.content-item_border-no {
  border: none;
}
li.list__item {
  list-style-type: square;
}
li.list__item>a {
  color: rgb(2, 100, 19);
}
li.list__item>a:hover {
  color: yellowgreen;
}
footer {
  height: 100px;
  background-color: rgb(2, 100, 19);
  display: flex;
  flex: 0 0 auto;
  flex-direction: row;
  align-items: center;
  justify-content: left;
}
.footer__year {
  margin: 0 40px 0 100px;
}
a.footer__link {
  color: white;
}
a.footer__link:hover {
  color: yellowgreen;
  text-shadow: 2px 2px 8px black;
}
a.footer__logo {
  margin: 0 100px 0 auto;
  height: 50px;
  width: 100px;
}
a.footer__logo:hover {
  border-radius: 5%;
  background-color: yellowgreen;
  box-shadow: 3px 3px 3px black, -3px -3px 3px black;
}
a.footer__logo>img {
  height: 100%;
  width: 100%;
}

